// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsEcsAlbServiceModule UT input changes should handle albName change 2`] = `
"- Expected
+ Received

  Object {
-   "output.alb-listener-test-alb-ListenerArn": Object {
-     "value": "aws_lb_listener.alb-listener-test-alb.arn",
+   "output.alb-listener-changed-alb-ListenerArn": Object {
+     "value": "aws_lb_listener.alb-listener-changed-alb.arn",
    },
-   "output.alb-region-test-alb-DNSName": Object {
-     "value": "aws_lb.alb-region-test-alb.dns_name",
+   "output.alb-region-changed-alb-DNSName": Object {
+     "value": "aws_lb.alb-region-changed-alb.dns_name",
    },
-   "output.alb-region-test-alb-LoadBalancerArn": Object {
-     "value": "aws_lb.alb-region-test-alb.arn",
+   "output.alb-region-changed-alb-LoadBalancerArn": Object {
+     "value": "aws_lb.alb-region-changed-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
-   "output.sec-grp-region-test-alb-Arn": Object {
-     "value": "aws_security_group.sec-grp-region-test-alb.arn",
+   "output.sec-grp-region-changed-alb-Arn": Object {
+     "value": "aws_security_group.sec-grp-region-changed-alb.arn",
    },
-   "output.sec-grp-region-test-alb-GroupId": Object {
-     "value": "aws_security_group.sec-grp-region-test-alb.id",
+   "output.sec-grp-region-changed-alb-GroupId": Object {
+     "value": "aws_security_group.sec-grp-region-changed-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
-   "resource.aws_lb.alb-region-test-alb": Object {
+   "resource.aws_lb.alb-region-changed-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
-     "name": "test-alb",
+     "name": "changed-alb",
      "provider": "aws.123-us-east-1",
-     "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
+     "security_groups": "[aws_security_group.sec-grp-region-changed-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
-   "resource.aws_lb_listener.alb-listener-test-alb": Object {
+   "resource.aws_lb_listener.alb-listener-changed-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
-     "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
+     "load_balancer_arn": "aws_lb.alb-region-changed-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
-   "resource.aws_security_group.sec-grp-region-test-alb": Object {
+   "resource.aws_security_group.sec-grp-region-changed-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
-   "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
+   "resource.aws_vpc_security_group_egress_rule.sec-grp-region-changed-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
-     "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
+     "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-changed-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
-     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "security_group_id": "aws_security_group.sec-grp-region-changed-alb.id",
      "to_port": "65535",
    },
-   "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
+   "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-changed-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
-     "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
+     "depends_on": "[aws_security_group.sec-grp-region-changed-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
-     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "security_group_id": "aws_security_group.sec-grp-region-changed-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle listener DefaultActions change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
-   "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
-     "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-   },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
-   },
-   "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
-     "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
-   "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
-     "cluster": "mock.clusterArn",
-     "desired_count": "1",
-     "launch_type": "FARGATE",
-     "load_balancer": Object {
-       "container_name": "test-container",
-       "container_port": "80",
-       "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-     },
-     "name": "backend",
-     "network_configuration": Object {
-       "assign_public_ip": "true",
-       "subnets": "[mock.Subnet1Id]",
-     },
-     "provider": "aws.123-us-east-1",
-     "task_definition": "mock.taskDefinitionArn",
-   },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
-       "forward": Object {
-         "target_group": Object {
-           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-           "weight": "100",
-         },
+       "fixed_response": Object {
+         "content_type": "text/plain",
+         "message_body": "Not Found!",
+         "status_code": "404",
        },
-       "type": "forward",
+       "type": "fixed-response",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
-   },
-   "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
-     "health_check": Object {
-       "enabled": "true",
-       "healthy_threshold": "3",
-       "interval": "30",
-       "matcher": "200",
-       "path": "/health",
-       "port": "80",
-       "protocol": "HTTP",
-       "timeout": "5",
-       "unhealthy_threshold": "3",
-     },
-     "ip_address_type": "ipv4",
-     "name": "test-container-80",
-     "port": "80",
-     "protocol": "HTTP",
-     "protocol_version": "HTTP1",
-     "provider": "aws.123-us-east-1",
-     "target_type": "ip",
-     "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle listener Port change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
-     "port": "80",
+     "port": "8080",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle listener rules change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
+   "resource.aws_lb_listener_rule.alb-listener-test-alb_rule_1": Object {
+     "action": Object {
+       "fixed_response": Object {
+         "content_type": "text/plain",
+         "message_body": "Not implemented!",
+         "status_code": "404",
+       },
+       "type": "fixed-response",
+     },
+     "condition": Object {
+       "path_pattern": Object {
+         "values": "[\\"/api\\"]",
+       },
+     },
+     "depends_on": "[aws_lb_listener.alb-listener-test-alb]",
+     "listener_arn": "aws_lb_listener.alb-listener-test-alb.arn",
+     "priority": "1",
+     "provider": "aws.123-us-east-1",
+   },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle target add change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
+   "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
+     "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+   },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
+   },
+   "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
+     "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
+   "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
+     "cluster": "mock.clusterArn",
+     "desired_count": "1",
+     "launch_type": "FARGATE",
+     "load_balancer": Object {
+       "container_name": "test-container",
+       "container_port": "80",
+       "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+     },
+     "name": "backend",
+     "network_configuration": Object {
+       "assign_public_ip": "true",
+       "subnets": "[mock.Subnet1Id]",
+     },
+     "provider": "aws.123-us-east-1",
+     "task_definition": "mock.taskDefinitionArn",
+   },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
-       "fixed_response": Object {
-         "content_type": "text/plain",
-         "message_body": "Not Found!",
-         "status_code": "404",
+       "forward": Object {
+         "target_group": Object {
+           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+           "weight": "100",
+         },
        },
-       "type": "fixed-response",
+       "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
+   },
+   "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
+     "health_check": Object {
+       "enabled": "true",
+       "healthy_threshold": "3",
+       "interval": "30",
+       "matcher": "200",
+       "path": "/health",
+       "port": "80",
+       "protocol": "HTTP",
+       "timeout": "5",
+       "unhealthy_threshold": "3",
+     },
+     "ip_address_type": "ipv4",
+     "name": "test-container-80",
+     "port": "80",
+     "protocol": "HTTP",
+     "protocol_version": "HTTP1",
+     "provider": "aws.123-us-east-1",
+     "target_type": "ip",
+     "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle target containerName change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
-       "container_name": "test-container",
+       "container_name": "side-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT input changes should handle target healthCheck change 2`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
-       "unhealthy_threshold": "3",
+       "unhealthy_threshold": "4",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.alb-listener-test-alb-ListenerArn": Object {
+     "value": "aws_lb_listener.alb-listener-test-alb.arn",
+   },
+   "output.alb-region-test-alb-DNSName": Object {
+     "value": "aws_lb.alb-region-test-alb.dns_name",
+   },
+   "output.alb-region-test-alb-LoadBalancerArn": Object {
+     "value": "aws_lb.alb-region-test-alb.arn",
+   },
+   "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
+     "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+   },
+   "output.ecs-cluster-region-qa-clusterArn": Object {
+     "value": "mock.clusterArn",
+   },
+   "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
+     "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
+   },
+   "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
+     "value": "1",
+   },
+   "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
+     "value": "mock.taskDefinitionArn",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.sec-grp-region-test-alb-Arn": Object {
+     "value": "aws_security_group.sec-grp-region-test-alb.arn",
+   },
+   "output.sec-grp-region-test-alb-GroupId": Object {
+     "value": "aws_security_group.sec-grp-region-test-alb.id",
+   },
+   "output.subnet-region-public-subnet-1-SubnetArn": Object {
+     "value": "mock.Subnet1Arn",
+   },
+   "output.subnet-region-public-subnet-1-SubnetId": Object {
+     "value": "mock.Subnet1Id",
+   },
+   "output.subnet-region-public-subnet-2-SubnetArn": Object {
+     "value": "mock.Subnet2Arn",
+   },
+   "output.subnet-region-public-subnet-2-SubnetId": Object {
+     "value": "mock.Subnet2Id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
+     "cluster": "mock.clusterArn",
+     "desired_count": "1",
+     "launch_type": "FARGATE",
+     "load_balancer": Object {
+       "container_name": "test-container",
+       "container_port": "80",
+       "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+     },
+     "name": "backend",
+     "network_configuration": Object {
+       "assign_public_ip": "true",
+       "subnets": "[mock.Subnet1Id]",
+     },
+     "provider": "aws.123-us-east-1",
+     "task_definition": "mock.taskDefinitionArn",
+   },
+   "resource.aws_lb.alb-region-test-alb": Object {
+     "internal": "false",
+     "ip_address_type": "ipv4",
+     "load_balancer_type": "application",
+     "name": "test-alb",
+     "provider": "aws.123-us-east-1",
+     "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
+     "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
+   },
+   "resource.aws_lb_listener.alb-listener-test-alb": Object {
+     "default_action": Object {
+       "forward": Object {
+         "target_group": Object {
+           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+           "weight": "100",
+         },
+       },
+       "type": "forward",
+     },
+     "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
+     "port": "80",
+     "protocol": "HTTP",
+     "provider": "aws.123-us-east-1",
+   },
+   "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
+     "health_check": Object {
+       "enabled": "true",
+       "healthy_threshold": "3",
+       "interval": "30",
+       "matcher": "200",
+       "path": "/health",
+       "port": "80",
+       "protocol": "HTTP",
+       "timeout": "5",
+       "unhealthy_threshold": "3",
+     },
+     "ip_address_type": "ipv4",
+     "name": "test-container-80",
+     "port": "80",
+     "protocol": "HTTP",
+     "protocol_version": "HTTP1",
+     "provider": "aws.123-us-east-1",
+     "target_type": "ip",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_security_group.sec-grp-region-test-alb": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
+     "cidr_ipv4": "0.0.0.0/0",
+     "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
+     "description": "tcp 0-65535 0.0.0.0/0",
+     "from_port": "0",
+     "ip_protocol": "tcp",
+     "provider": "aws.123-us-east-1",
+     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "to_port": "65535",
+   },
+   "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
+     "cidr_ipv4": "0.0.0.0/0",
+     "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
+     "description": "tcp 80-80 0.0.0.0/0",
+     "from_port": "80",
+     "ip_protocol": "tcp",
+     "provider": "aws.123-us-east-1",
+     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "to_port": "80",
+   },
+ }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD 4`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
+   "resource.aws_lb_listener_rule.alb-listener-test-alb_rule_1": Object {
+     "action": Object {
+       "fixed_response": Object {
+         "content_type": "text/plain",
+         "message_body": "Not implemented!",
+         "status_code": "404",
+       },
+       "type": "fixed-response",
+     },
+     "condition": Object {
+       "path_pattern": Object {
+         "values": "[\\"/api\\"]",
+       },
+     },
+     "depends_on": "[aws_lb_listener.alb-listener-test-alb]",
+     "listener_arn": "aws_lb_listener.alb-listener-test-alb.arn",
+     "priority": "1",
+     "provider": "aws.123-us-east-1",
+   },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD 6`] = `
"- Expected
+ Received

  Object {
    "output.alb-listener-test-alb-ListenerArn": Object {
      "value": "aws_lb_listener.alb-listener-test-alb.arn",
    },
    "output.alb-region-test-alb-DNSName": Object {
      "value": "aws_lb.alb-region-test-alb.dns_name",
    },
    "output.alb-region-test-alb-LoadBalancerArn": Object {
      "value": "aws_lb.alb-region-test-alb.arn",
    },
    "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
      "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
    },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
    },
    "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
      "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
    "output.sec-grp-region-test-alb-Arn": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.arn",
    },
    "output.sec-grp-region-test-alb-GroupId": Object {
      "value": "aws_security_group.sec-grp-region-test-alb.id",
    },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
    },
    "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
      "cluster": "mock.clusterArn",
      "desired_count": "1",
      "launch_type": "FARGATE",
      "load_balancer": Object {
        "container_name": "test-container",
        "container_port": "80",
        "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
      },
      "name": "backend",
      "network_configuration": Object {
        "assign_public_ip": "true",
        "subnets": "[mock.Subnet1Id]",
      },
      "provider": "aws.123-us-east-1",
      "task_definition": "mock.taskDefinitionArn",
    },
    "resource.aws_lb.alb-region-test-alb": Object {
      "internal": "false",
      "ip_address_type": "ipv4",
      "load_balancer_type": "application",
      "name": "test-alb",
      "provider": "aws.123-us-east-1",
      "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
      "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
    },
    "resource.aws_lb_listener.alb-listener-test-alb": Object {
      "default_action": Object {
        "forward": Object {
          "target_group": Object {
            "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
            "weight": "100",
          },
        },
        "type": "forward",
      },
      "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
      "port": "80",
      "protocol": "HTTP",
      "provider": "aws.123-us-east-1",
    },
-   "resource.aws_lb_listener_rule.alb-listener-test-alb_rule_1": Object {
+   "resource.aws_lb_listener_rule.alb-listener-test-alb_rule_2": Object {
      "action": Object {
-       "fixed_response": Object {
-         "content_type": "text/plain",
-         "message_body": "Not implemented!",
-         "status_code": "404",
+       "forward": Object {
+         "target_group": Object {
+           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+           "weight": "100",
+         },
        },
-       "type": "fixed-response",
+       "type": "forward",
      },
      "condition": Object {
        "path_pattern": Object {
          "values": "[\\"/api\\"]",
        },
      },
      "depends_on": "[aws_lb_listener.alb-listener-test-alb]",
      "listener_arn": "aws_lb_listener.alb-listener-test-alb.arn",
-     "priority": "1",
+     "priority": "2",
      "provider": "aws.123-us-east-1",
    },
    "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
      "health_check": Object {
        "enabled": "true",
        "healthy_threshold": "3",
        "interval": "30",
        "matcher": "200",
        "path": "/health",
        "port": "80",
        "protocol": "HTTP",
        "timeout": "5",
        "unhealthy_threshold": "3",
      },
      "ip_address_type": "ipv4",
      "name": "test-container-80",
      "port": "80",
      "protocol": "HTTP",
      "protocol_version": "HTTP1",
      "provider": "aws.123-us-east-1",
      "target_type": "ip",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_security_group.sec-grp-region-test-alb": Object {
      "provider": "aws.123-us-east-1",
      "vpc_id": "mock.VpcId",
    },
    "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
      "description": "tcp 0-65535 0.0.0.0/0",
      "from_port": "0",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "65535",
    },
    "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
      "cidr_ipv4": "0.0.0.0/0",
      "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
      "description": "tcp 80-80 0.0.0.0/0",
      "from_port": "80",
      "ip_protocol": "tcp",
      "provider": "aws.123-us-east-1",
      "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
      "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD 8`] = `
"- Expected
+ Received

  Object {
-   "output.alb-listener-test-alb-ListenerArn": Object {
-     "value": "aws_lb_listener.alb-listener-test-alb.arn",
-   },
-   "output.alb-region-test-alb-DNSName": Object {
-     "value": "aws_lb.alb-region-test-alb.dns_name",
-   },
-   "output.alb-region-test-alb-LoadBalancerArn": Object {
-     "value": "aws_lb.alb-region-test-alb.arn",
-   },
-   "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
-     "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-   },
    "output.ecs-cluster-region-qa-clusterArn": Object {
      "value": "mock.clusterArn",
-   },
-   "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
-     "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
      "value": "1",
    },
    "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
      "value": "mock.taskDefinitionArn",
    },
    "output.igw-region-InternetGatewayId": Object {
      "value": "mock.InternetGatewayId",
    },
-   "output.sec-grp-region-test-alb-Arn": Object {
-     "value": "aws_security_group.sec-grp-region-test-alb.arn",
-   },
-   "output.sec-grp-region-test-alb-GroupId": Object {
-     "value": "aws_security_group.sec-grp-region-test-alb.id",
-   },
    "output.subnet-region-public-subnet-1-SubnetArn": Object {
      "value": "mock.Subnet1Arn",
    },
    "output.subnet-region-public-subnet-1-SubnetId": Object {
      "value": "mock.Subnet1Id",
    },
    "output.subnet-region-public-subnet-2-SubnetArn": Object {
      "value": "mock.Subnet2Arn",
    },
    "output.subnet-region-public-subnet-2-SubnetId": Object {
      "value": "mock.Subnet2Id",
    },
    "output.vpc-region-VpcId": Object {
      "value": "mock.VpcId",
-   },
-   "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
-     "cluster": "mock.clusterArn",
-     "desired_count": "1",
-     "launch_type": "FARGATE",
-     "load_balancer": Object {
-       "container_name": "test-container",
-       "container_port": "80",
-       "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-     },
-     "name": "backend",
-     "network_configuration": Object {
-       "assign_public_ip": "true",
-       "subnets": "[mock.Subnet1Id]",
-     },
-     "provider": "aws.123-us-east-1",
-     "task_definition": "mock.taskDefinitionArn",
-   },
-   "resource.aws_lb.alb-region-test-alb": Object {
-     "internal": "false",
-     "ip_address_type": "ipv4",
-     "load_balancer_type": "application",
-     "name": "test-alb",
-     "provider": "aws.123-us-east-1",
-     "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
-     "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
-   },
-   "resource.aws_lb_listener.alb-listener-test-alb": Object {
-     "default_action": Object {
-       "forward": Object {
-         "target_group": Object {
-           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-           "weight": "100",
-         },
-       },
-       "type": "forward",
-     },
-     "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
-     "port": "80",
-     "protocol": "HTTP",
-     "provider": "aws.123-us-east-1",
-   },
-   "resource.aws_lb_listener_rule.alb-listener-test-alb_rule_2": Object {
-     "action": Object {
-       "forward": Object {
-         "target_group": Object {
-           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
-           "weight": "100",
-         },
-       },
-       "type": "forward",
-     },
-     "condition": Object {
-       "path_pattern": Object {
-         "values": "[\\"/api\\"]",
-       },
-     },
-     "depends_on": "[aws_lb_listener.alb-listener-test-alb]",
-     "listener_arn": "aws_lb_listener.alb-listener-test-alb.arn",
-     "priority": "2",
-     "provider": "aws.123-us-east-1",
-   },
-   "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
-     "health_check": Object {
-       "enabled": "true",
-       "healthy_threshold": "3",
-       "interval": "30",
-       "matcher": "200",
-       "path": "/health",
-       "port": "80",
-       "protocol": "HTTP",
-       "timeout": "5",
-       "unhealthy_threshold": "3",
-     },
-     "ip_address_type": "ipv4",
-     "name": "test-container-80",
-     "port": "80",
-     "protocol": "HTTP",
-     "protocol_version": "HTTP1",
-     "provider": "aws.123-us-east-1",
-     "target_type": "ip",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_security_group.sec-grp-region-test-alb": Object {
-     "provider": "aws.123-us-east-1",
-     "vpc_id": "mock.VpcId",
-   },
-   "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
-     "cidr_ipv4": "0.0.0.0/0",
-     "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
-     "description": "tcp 0-65535 0.0.0.0/0",
-     "from_port": "0",
-     "ip_protocol": "tcp",
-     "provider": "aws.123-us-east-1",
-     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
-     "to_port": "65535",
-   },
-   "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
-     "cidr_ipv4": "0.0.0.0/0",
-     "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
-     "description": "tcp 80-80 0.0.0.0/0",
-     "from_port": "80",
-     "ip_protocol": "tcp",
-     "provider": "aws.123-us-east-1",
-     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
-     "to_port": "80",
    },
  }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD tags 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.alb-listener-test-alb-ListenerArn": Object {
+     "value": "aws_lb_listener.alb-listener-test-alb.arn",
+   },
+   "output.alb-region-test-alb-DNSName": Object {
+     "value": "aws_lb.alb-region-test-alb.dns_name",
+   },
+   "output.alb-region-test-alb-LoadBalancerArn": Object {
+     "value": "aws_lb.alb-region-test-alb.arn",
+   },
+   "output.alb-target-group-backend-v1-region-qa-public-subnet-1-TargetGroupArn": Object {
+     "value": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+   },
+   "output.ecs-cluster-region-qa-clusterArn": Object {
+     "value": "mock.clusterArn",
+   },
+   "output.ecs-service-backend-v1-region-qa-public-subnet-1-serviceArn": Object {
+     "value": "aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1.id",
+   },
+   "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-revision": Object {
+     "value": "1",
+   },
+   "output.ecs-task-definition-backend-v1-region-qa-public-subnet-1-taskDefinitionArn": Object {
+     "value": "mock.taskDefinitionArn",
+   },
+   "output.igw-region-InternetGatewayId": Object {
+     "value": "mock.InternetGatewayId",
+   },
+   "output.sec-grp-region-test-alb-Arn": Object {
+     "value": "aws_security_group.sec-grp-region-test-alb.arn",
+   },
+   "output.sec-grp-region-test-alb-GroupId": Object {
+     "value": "aws_security_group.sec-grp-region-test-alb.id",
+   },
+   "output.subnet-region-public-subnet-1-SubnetArn": Object {
+     "value": "mock.Subnet1Arn",
+   },
+   "output.subnet-region-public-subnet-1-SubnetId": Object {
+     "value": "mock.Subnet1Id",
+   },
+   "output.subnet-region-public-subnet-2-SubnetArn": Object {
+     "value": "mock.Subnet2Arn",
+   },
+   "output.subnet-region-public-subnet-2-SubnetId": Object {
+     "value": "mock.Subnet2Id",
+   },
+   "output.vpc-region-VpcId": Object {
+     "value": "mock.VpcId",
+   },
+   "resource.aws_ecs_service.ecs-service-backend-v1-region-qa-public-subnet-1": Object {
+     "cluster": "mock.clusterArn",
+     "desired_count": "1",
+     "launch_type": "FARGATE",
+     "load_balancer": Object {
+       "container_name": "test-container",
+       "container_port": "80",
+       "target_group_arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+     },
+     "name": "backend",
+     "network_configuration": Object {
+       "assign_public_ip": "true",
+       "subnets": "[mock.Subnet1Id]",
+     },
+     "provider": "aws.123-us-east-1",
+     "task_definition": "mock.taskDefinitionArn",
+   },
+   "resource.aws_lb.alb-region-test-alb": Object {
+     "internal": "false",
+     "ip_address_type": "ipv4",
+     "load_balancer_type": "application",
+     "name": "test-alb",
+     "provider": "aws.123-us-east-1",
+     "security_groups": "[aws_security_group.sec-grp-region-test-alb.id]",
+     "subnets": "[mock.Subnet1Id, mock.Subnet2Id]",
+   },
+   "resource.aws_lb_listener.alb-listener-test-alb": Object {
+     "default_action": Object {
+       "forward": Object {
+         "target_group": Object {
+           "arn": "aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1.arn",
+           "weight": "100",
+         },
+       },
+       "type": "forward",
+     },
+     "load_balancer_arn": "aws_lb.alb-region-test-alb.arn",
+     "port": "80",
+     "protocol": "HTTP",
+     "provider": "aws.123-us-east-1",
+   },
+   "resource.aws_lb_target_group.alb-target-group-backend-v1-region-qa-public-subnet-1": Object {
+     "health_check": Object {
+       "enabled": "true",
+       "healthy_threshold": "3",
+       "interval": "30",
+       "matcher": "200",
+       "path": "/health",
+       "port": "80",
+       "protocol": "HTTP",
+       "timeout": "5",
+       "unhealthy_threshold": "3",
+     },
+     "ip_address_type": "ipv4",
+     "name": "test-container-80",
+     "port": "80",
+     "protocol": "HTTP",
+     "protocol_version": "HTTP1",
+     "provider": "aws.123-us-east-1",
+     "target_type": "ip",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_security_group.sec-grp-region-test-alb": Object {
+     "provider": "aws.123-us-east-1",
+     "vpc_id": "mock.VpcId",
+   },
+   "resource.aws_vpc_security_group_egress_rule.sec-grp-region-test-alb_egress_0": Object {
+     "cidr_ipv4": "0.0.0.0/0",
+     "depends_on": "[aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0]",
+     "description": "tcp 0-65535 0.0.0.0/0",
+     "from_port": "0",
+     "ip_protocol": "tcp",
+     "provider": "aws.123-us-east-1",
+     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "to_port": "65535",
+   },
+   "resource.aws_vpc_security_group_ingress_rule.sec-grp-region-test-alb_ingress_0": Object {
+     "cidr_ipv4": "0.0.0.0/0",
+     "depends_on": "[aws_security_group.sec-grp-region-test-alb]",
+     "description": "tcp 80-80 0.0.0.0/0",
+     "from_port": "80",
+     "ip_protocol": "tcp",
+     "provider": "aws.123-us-east-1",
+     "security_group_id": "aws_security_group.sec-grp-region-test-alb.id",
+     "to_port": "80",
+   },
+ }"
`;

exports[`AwsEcsAlbServiceModule UT should CUD tags 4`] = `"Compared values have no visual difference."`;

exports[`AwsEcsAlbServiceModule UT should CUD tags 6`] = `"Compared values have no visual difference."`;

exports[`AwsEcsAlbServiceModule UT should handle moduleId change 2`] = `"Compared values have no visual difference."`;
